objects/ssot__CoverageBenefitItem__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdditionalInformationNoteText__c</fullName>
        <label>Additional Information Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitCategoryText__c</fullName>
        <label>Benefit Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CoverageBenefitId__c</fullName>
        <label>Coverage Benefit</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CoverageLevelText__c</fullName>
        <label>Coverage Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DoesDeductibleApply__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does Deductible Apply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Coverage Benefit Item Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InNetworkCoverageDescription__c</fullName>
        <label>In Network Coverage Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsInPlanNetwork__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is In Plan Network</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsPreauthorizationRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Preauthorization Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__MemberId__c</fullName>
        <label>Member</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNetworkCoverageDescription__c</fullName>
        <label>Outof Network Coverage Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceTypeCodeSetId__c</fullName>
        <label>Service Type Code Set</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceTypeCode__c</fullName>
        <label>Service Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceTypeText__c</fullName>
        <label>Service Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemModified__c</fullName>
        <label>Source System Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemName__c</fullName>
        <label>Source System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TimePeriodDescription__c</fullName>
        <label>Time Period Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716721968556_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CoverageBenefitItem_ServiceTypeCodeS_rel</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>CoverageBenefitItem_ServiceTypeCodeS_rel</relationshipLabel>
        <relationshipName>rel_1716721968556_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716721973142_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CoverageBenefitItem_MemberId_map_Acc_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>CoverageBenefitItem_MemberId_map_Acc_rel</relationshipLabel>
        <relationshipName>rel_1716721973142_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726071149_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CoverageBenefitItem_CoverageBenefitI_rel</label>
        <referenceTo>ssot__CoverageBenefit__dlm</referenceTo>
        <relationshipLabel>CoverageBenefitItem_CoverageBenefitI_rel</relationshipLabel>
        <relationshipName>rel_1716726071149_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>